--- a/photographer.html
+++ b/photographer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
   </head>
@@ -20,9 +20,9 @@
 			<div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+         <button id="close">  <img src="assets/icons/close.svg"></button>
         </header>
-				<form>
+				<form id="form_modal">
 					<div>
 						<label>Prénom</label>
 						<input />
@@ -31,7 +31,7 @@
 				</form>
 			</div>
 		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+    <script type="text/javascript" src="scripts/pages/photographer.js"></script>
+    <script type="text/javascript" src="scripts/utils/contactForm.js"></script>
   </body>
 </html>
