--- a/photographer.html
+++ b/photographer.html
@@ -15,6 +15,7 @@
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
+<div id="medias"></div>
 
     </main>
 
